--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	    </div>
 		    <div class="myrow">
 			Bu github sayfasında kullandığım kod dizini resimler ve her şey için bakacağınız github repository için buraya tıklamanız yeterli.
-			<a href="#">Github REPOSİTORY için bana tıkla</a>
+			<a href="https://github.com/saidkaynarca/saidkaynarca.github.io">Github REPOSİTORY için bana tıkla</a>
 	    </div>
 		<div class="myrow">1
 			Kişisel github profilime bakmak isterseniz buraya tıklayın
